# learning-dbt

dbt-eng-dados-academy/: .user.yml  requirements.txt
dbt-eng-dados-academy/dw_academy/: .user.yml  dbt_project.yml  profiles.yml
dbt-weather-apoena/: .gitignore  main.py  pyproject.toml
dbt-weather-apoena/weather/: dbt_project.yml
dbt-weather-apoena/weather/macros/: convert_to_local.sql
dbt-weather-apoena/weather/models/sources/: sources.yml
dbt-weather-apoena/weather/models/sources/marts/: mart_weather_report.sql
dbt-weather-apoena/weather/models/sources/staging/: stg_weather_report.sql  stg_weather_report__deduped.sql
dbt-weather-apoena/weather/src/extract/: .env_boilerplate  api_extract.py
